--- a/oneletrajz.css
+++ b/oneletrajz.css
@@ -7,13 +7,14 @@
 
 body {
 
-    margin: 0;
+    margin: 0px;
     padding: 0;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
     background-image: url(image/forest.jpg);
     background-size: 100%;
+
     
     }
 
@@ -50,6 +51,7 @@ body {
     letter-spacing: 3px;
     font-weight: 100;
     text-shadow: 2px 2px 4px;
+  
 }
 
 .prog p{
@@ -65,11 +67,15 @@ ul{
     margin-top: -20px;
     margin-right: 60px;
     font-size: 20px;
+    position: fixed;
+    
+
    
 }
 
 ul li{
     display: inline-block;
+
 
  
 }
@@ -80,9 +86,10 @@ ul li a{
     padding: 5px 20px;
     border: 1px solid black;
     transition: 0.6s ease;
-  
+   
  
 }
+
 
 ul li a:hover{
     background-color: gray;
@@ -133,7 +140,7 @@ ul li a:hover{
     width: 450px;
     background: rgba(0, 0, 0, 0.4);
     padding: 40px;
-    text-align: center;
+    text-align: left;
     margin: auto;
     margin-top: 5%;
     color:white;
@@ -141,6 +148,8 @@ ul li a:hover{
     border-radius: 10%;
     box-shadow: 10px 10px 5px gray;
     float: right;
+    height: 800px;
+    font-size: 20px;
 }
 
 
@@ -148,7 +157,7 @@ ul li a:hover{
     width: 450px;
     background: rgba(0, 0, 0, 0.4);
     padding: 40px;
-    text-align: center;
+    text-align: left;
     margin: auto;
     margin-top: 5%;
     color:white;
@@ -156,6 +165,8 @@ ul li a:hover{
     border-radius: 10%;
     box-shadow: 10px 10px 5px gray;
     float:left;
+    height: 800px;
+    font-size: 20px;
     
 }
 
@@ -172,8 +183,48 @@ ul li a:hover{
     font-family: 'Centruy Gothic', sans-serif;
     border-radius: 10%;
     box-shadow: 10px 10px 5px gray;
+    font-size: 20px;
+    height: 890px;
 
 }
 
 
 
+.valorant {
+    width: 120%,
+    
+}
+
+.art {
+    width: 400px;
+    float: right;
+    
+}
+
+
+
+
+#link {
+    color: white;
+    text-decoration: none;
+    text-decoration: underline;
+    display: inline-block;
+  
+}
+
+#link:hover {
+    transform: scale(1.1);
+}
+
+
+#batman{
+    width: 80px;
+    float:right;
+}
+
+#stream {
+    color: white;
+    text-decoration: none;
+    text-decoration: underline;
+    display: inline-block;
+}
